{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 61,
  "lineage": "5d3705f9-6735-9487-48f5-cfe62baaf3cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fica_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:internet-gateway/igw-090346dcccbb4753a",
            "id": "igw-090346dcccbb4753a",
            "owner_id": "654362432770",
            "region": "us-east-1",
            "tags": {
              "Name": "fica-judge-igw-qa"
            },
            "tags_all": {
              "Name": "fica-judge-igw-qa"
            },
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "igw-090346dcccbb4753a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fica_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:route-table/rtb-0e29a37eeef00016c",
            "id": "rtb-0e29a37eeef00016c",
            "owner_id": "654362432770",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090346dcccbb4753a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fica-judge-rt-qa"
            },
            "tags_all": {
              "Name": "fica-judge-rt-qa"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "rtb-0e29a37eeef00016c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.fica_igw",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fica_rta_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01187f46240809547",
            "region": "us-east-1",
            "route_table_id": "rtb-0e29a37eeef00016c",
            "subnet_id": "subnet-07963a84d5fdbd607"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "rtbassoc-01187f46240809547",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.fica_igw",
            "aws_route_table.fica_rt",
            "aws_subnet.fica_subnet_a",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fica_rta_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0733e4e5f91a2c24c",
            "region": "us-east-1",
            "route_table_id": "rtb-0e29a37eeef00016c",
            "subnet_id": "subnet-0fd4c84cabda00237"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "rtbassoc-0733e4e5f91a2c24c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.fica_igw",
            "aws_route_table.fica_rt",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fica_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:security-group/sg-0fd515ba7606a451f",
            "description": "Permitir trafico HA para FICA-JUDGE",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd515ba7606a451f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Balanceador",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Puertos de la Flota de Microservicios Node.js",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3005
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RabbitMQ y Panel de Administracion",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fica-judge-sg-qa",
            "name_prefix": "",
            "owner_id": "654362432770",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fica-judge-sg-qa"
            },
            "tags_all": {
              "Name": "fica-judge-sg-qa"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "sg-0fd515ba7606a451f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fica_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:subnet/subnet-07963a84d5fdbd607",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07963a84d5fdbd607",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654362432770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fica-judge-subnet-qa-a"
            },
            "tags_all": {
              "Name": "fica-judge-subnet-qa-a"
            },
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "subnet-07963a84d5fdbd607",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fica_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:subnet/subnet-0fd4c84cabda00237",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd4c84cabda00237",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654362432770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fica-judge-subnet-qa-b"
            },
            "tags_all": {
              "Name": "fica-judge-subnet-qa-b"
            },
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "subnet-0fd4c84cabda00237",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fica_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:vpc/vpc-01cbeb0cd29c55142",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f44b081f934cd12",
            "default_route_table_id": "rtb-0744639f5c961874a",
            "default_security_group_id": "sg-03bdb59b637e9bbfb",
            "dhcp_options_id": "dopt-02c9d92e059efb375",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cbeb0cd29c55142",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0744639f5c961874a",
            "owner_id": "654362432770",
            "region": "us-east-1",
            "tags": {
              "Name": "fica-judge-vpc-qa",
              "Project": "FICA-JUDGE"
            },
            "tags_all": {
              "Name": "fica-judge-vpc-qa",
              "Project": "FICA-JUDGE"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "vpc-01cbeb0cd29c55142",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.api_gateway",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-api-gateway-alb-qa/2db559e22af61b15",
            "arn_suffix": "app/fica-api-gateway-alb-qa/2db559e22af61b15",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fica-api-gateway-alb-qa-2028480800.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-api-gateway-alb-qa/2db559e22af61b15",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fica-api-gateway-alb-qa",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0fd515ba7606a451f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07963a84d5fdbd607"
              },
              {
                "subnet_id": "subnet-0fd4c84cabda00237"
              }
            ],
            "subnets": [
              "subnet-07963a84d5fdbd607",
              "subnet-0fd4c84cabda00237"
            ],
            "vpc_id": "vpc-01cbeb0cd29c55142",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-api-gateway-alb-qa/2db559e22af61b15"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-api-gateway-alb-qa/2db559e22af61b15/b83132d99ebdffb1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-api-gateway-tg-qa/c5c8c9c7c5895a61",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-api-gateway-alb-qa/2db559e22af61b15/b83132d99ebdffb1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-api-gateway-alb-qa/2db559e22af61b15",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-api-gateway-alb-qa/2db559e22af61b15/b83132d99ebdffb1"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc",
            "module.api_gateway.aws_lb.alb",
            "module.api_gateway.aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-api-gateway-tg-qa/c5c8c9c7c5895a61",
            "arn_suffix": "targetgroup/fica-api-gateway-tg-qa/c5c8c9c7c5895a61",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-api-gateway-tg-qa/c5c8c9c7c5895a61",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fica-api-gateway-tg-qa",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-api-gateway-tg-qa/c5c8c9c7c5895a61"
          },
          "dependencies": [
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:security-group/sg-0f20e9683219af541",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f20e9683219af541",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fica-api-gateway-db-sg-qa",
            "name_prefix": "",
            "owner_id": "654362432770",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "sg-0f20e9683219af541",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.assignment_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-assignment-alb-qa/b9c0f84bb2cffdc1",
            "arn_suffix": "app/fica-assignment-alb-qa/b9c0f84bb2cffdc1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fica-assignment-alb-qa-1763760823.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-assignment-alb-qa/b9c0f84bb2cffdc1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fica-assignment-alb-qa",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0fd515ba7606a451f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07963a84d5fdbd607"
              },
              {
                "subnet_id": "subnet-0fd4c84cabda00237"
              }
            ],
            "subnets": [
              "subnet-07963a84d5fdbd607",
              "subnet-0fd4c84cabda00237"
            ],
            "vpc_id": "vpc-01cbeb0cd29c55142",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-assignment-alb-qa/b9c0f84bb2cffdc1"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.assignment_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-assignment-alb-qa/b9c0f84bb2cffdc1/4635aa337b08cd46",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-assignment-tg-qa/ebe2df39bab86313",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-assignment-alb-qa/b9c0f84bb2cffdc1/4635aa337b08cd46",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-assignment-alb-qa/b9c0f84bb2cffdc1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-assignment-alb-qa/b9c0f84bb2cffdc1/4635aa337b08cd46"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc",
            "module.assignment_service.aws_lb.alb",
            "module.assignment_service.aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "module": "module.assignment_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-assignment-tg-qa/ebe2df39bab86313",
            "arn_suffix": "targetgroup/fica-assignment-tg-qa/ebe2df39bab86313",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3005",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-assignment-tg-qa/ebe2df39bab86313",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fica-assignment-tg-qa",
            "port": 3005,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-assignment-tg-qa/ebe2df39bab86313"
          },
          "dependencies": [
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.assignment_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:security-group/sg-073698f59c091c0b9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073698f59c091c0b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fica-assignment-db-sg-qa",
            "name_prefix": "",
            "owner_id": "654362432770",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "sg-073698f59c091c0b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.catalog_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-catalog-alb-qa/9f535422c0125ed9",
            "arn_suffix": "app/fica-catalog-alb-qa/9f535422c0125ed9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fica-catalog-alb-qa-1755343106.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-catalog-alb-qa/9f535422c0125ed9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fica-catalog-alb-qa",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0fd515ba7606a451f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07963a84d5fdbd607"
              },
              {
                "subnet_id": "subnet-0fd4c84cabda00237"
              }
            ],
            "subnets": [
              "subnet-07963a84d5fdbd607",
              "subnet-0fd4c84cabda00237"
            ],
            "vpc_id": "vpc-01cbeb0cd29c55142",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-catalog-alb-qa/9f535422c0125ed9"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.catalog_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-catalog-alb-qa/9f535422c0125ed9/33744e8f1fd66006",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-catalog-tg-qa/8f93511dede8e6ad",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-catalog-alb-qa/9f535422c0125ed9/33744e8f1fd66006",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-catalog-alb-qa/9f535422c0125ed9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-catalog-alb-qa/9f535422c0125ed9/33744e8f1fd66006"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc",
            "module.catalog_service.aws_lb.alb",
            "module.catalog_service.aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "module": "module.catalog_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-catalog-tg-qa/8f93511dede8e6ad",
            "arn_suffix": "targetgroup/fica-catalog-tg-qa/8f93511dede8e6ad",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3002",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-catalog-tg-qa/8f93511dede8e6ad",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fica-catalog-tg-qa",
            "port": 3002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-catalog-tg-qa/8f93511dede8e6ad"
          },
          "dependencies": [
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.catalog_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:security-group/sg-0b57048288ea26dea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b57048288ea26dea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fica-catalog-db-sg-qa",
            "name_prefix": "",
            "owner_id": "654362432770",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "sg-0b57048288ea26dea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.iam_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-iam-alb-qa/582c96732f1c34ba",
            "arn_suffix": "app/fica-iam-alb-qa/582c96732f1c34ba",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fica-iam-alb-qa-1165401757.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-iam-alb-qa/582c96732f1c34ba",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fica-iam-alb-qa",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0fd515ba7606a451f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07963a84d5fdbd607"
              },
              {
                "subnet_id": "subnet-0fd4c84cabda00237"
              }
            ],
            "subnets": [
              "subnet-07963a84d5fdbd607",
              "subnet-0fd4c84cabda00237"
            ],
            "vpc_id": "vpc-01cbeb0cd29c55142",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-iam-alb-qa/582c96732f1c34ba"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.iam_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-iam-alb-qa/582c96732f1c34ba/e5c9968984880470",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-iam-tg-qa/ed24557feec685f2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-iam-alb-qa/582c96732f1c34ba/e5c9968984880470",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-iam-alb-qa/582c96732f1c34ba",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-iam-alb-qa/582c96732f1c34ba/e5c9968984880470"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc",
            "module.iam_service.aws_lb.alb",
            "module.iam_service.aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "module": "module.iam_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-iam-tg-qa/ed24557feec685f2",
            "arn_suffix": "targetgroup/fica-iam-tg-qa/ed24557feec685f2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3001",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-iam-tg-qa/ed24557feec685f2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fica-iam-tg-qa",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-iam-tg-qa/ed24557feec685f2"
          },
          "dependencies": [
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.iam_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:security-group/sg-0ae4dff38d3c7e10f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae4dff38d3c7e10f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fica-iam-db-sg-qa",
            "name_prefix": "",
            "owner_id": "654362432770",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "sg-0ae4dff38d3c7e10f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ranking_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-ranking-alb-qa/2a888705237ea90a",
            "arn_suffix": "app/fica-ranking-alb-qa/2a888705237ea90a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fica-ranking-alb-qa-1060519431.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-ranking-alb-qa/2a888705237ea90a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fica-ranking-alb-qa",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0fd515ba7606a451f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07963a84d5fdbd607"
              },
              {
                "subnet_id": "subnet-0fd4c84cabda00237"
              }
            ],
            "subnets": [
              "subnet-07963a84d5fdbd607",
              "subnet-0fd4c84cabda00237"
            ],
            "vpc_id": "vpc-01cbeb0cd29c55142",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-ranking-alb-qa/2a888705237ea90a"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ranking_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-ranking-alb-qa/2a888705237ea90a/0d8b68bc627721e7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-ranking-tg-qa/2aad7c7f432d5706",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-ranking-alb-qa/2a888705237ea90a/0d8b68bc627721e7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-ranking-alb-qa/2a888705237ea90a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-ranking-alb-qa/2a888705237ea90a/0d8b68bc627721e7"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc",
            "module.ranking_service.aws_lb.alb",
            "module.ranking_service.aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "module": "module.ranking_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-ranking-tg-qa/2aad7c7f432d5706",
            "arn_suffix": "targetgroup/fica-ranking-tg-qa/2aad7c7f432d5706",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3004",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-ranking-tg-qa/2aad7c7f432d5706",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fica-ranking-tg-qa",
            "port": 3004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-ranking-tg-qa/2aad7c7f432d5706"
          },
          "dependencies": [
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ranking_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:security-group/sg-0af113292c446ff3c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af113292c446ff3c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fica-ranking-db-sg-qa",
            "name_prefix": "",
            "owner_id": "654362432770",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "sg-0af113292c446ff3c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.submission_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-submission-alb-qa/757d9e4e0e2b30a3",
            "arn_suffix": "app/fica-submission-alb-qa/757d9e4e0e2b30a3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fica-submission-alb-qa-798792890.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-submission-alb-qa/757d9e4e0e2b30a3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fica-submission-alb-qa",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0fd515ba7606a451f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07963a84d5fdbd607"
              },
              {
                "subnet_id": "subnet-0fd4c84cabda00237"
              }
            ],
            "subnets": [
              "subnet-07963a84d5fdbd607",
              "subnet-0fd4c84cabda00237"
            ],
            "vpc_id": "vpc-01cbeb0cd29c55142",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-submission-alb-qa/757d9e4e0e2b30a3"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.submission_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-submission-alb-qa/757d9e4e0e2b30a3/9b461023185ae0ca",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-submission-tg-qa/665652644891bade",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-submission-alb-qa/757d9e4e0e2b30a3/9b461023185ae0ca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:loadbalancer/app/fica-submission-alb-qa/757d9e4e0e2b30a3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:listener/app/fica-submission-alb-qa/757d9e4e0e2b30a3/9b461023185ae0ca"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_subnet.fica_subnet_a",
            "aws_subnet.fica_subnet_b",
            "aws_vpc.fica_vpc",
            "module.submission_service.aws_lb.alb",
            "module.submission_service.aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "module": "module.submission_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-submission-tg-qa/665652644891bade",
            "arn_suffix": "targetgroup/fica-submission-tg-qa/665652644891bade",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3003",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-submission-tg-qa/665652644891bade",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fica-submission-tg-qa",
            "port": 3003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654362432770:targetgroup/fica-submission-tg-qa/665652644891bade"
          },
          "dependencies": [
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.submission_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654362432770:security-group/sg-034c588e5444e29ad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034c588e5444e29ad",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd515ba7606a451f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fica-submission-db-sg-qa",
            "name_prefix": "",
            "owner_id": "654362432770",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01cbeb0cd29c55142"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654362432770",
            "id": "sg-034c588e5444e29ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.fica_sg",
            "aws_vpc.fica_vpc"
          ]
        }
      ]
    }
  ]
}